namespace intro_uml;

public interface IDrawable
 {
     void Draw();
 }
