namespace intro_uml;

public record Point
{
    public double X { get; set; }
    public double Y { get; set; }
}
